--- a/next/package.json
+++ b/next/package.json
@@ -6,19 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "rfc": "plop"
   },
   "dependencies": {
+    "next": "14.2.5",
+    "next-mdx-remote": "^5.0.0",
+    "next-sanity": "^9.4.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "sass": "^1.77.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "plop": "^4.0.1",
+    "prettier": "^3.3.3",
+    "typescript": "^5"
   }
 }
