--- a/next/.eslintrc.json
+++ b/next/.eslintrc.json
@@ -25,7 +25,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "react"],
+  "plugins": ["react"],
   "rules": {
     "indent": ["error", 2],
     "quotes": ["error", "single"],
