--- a/next/package.json
+++ b/next/package.json
@@ -15,7 +15,8 @@
     "next-sanity": "^9.4.2",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/node": "^20",
