--- a/sanity/package.json
+++ b/sanity/package.json
@@ -19,6 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.51.0",
+    "sanity-plugin-markdown": "^4.1.2",
+    "sanity-plugin-media": "^2.3.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
