--- a/next/.eslintrc.json
+++ b/next/.eslintrc.json
@@ -30,6 +30,8 @@
     "indent": ["error", 2],
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-uses-react": "off",
     "no-irregular-whitespace": [
       "error",
       { "skipStrings": true, "skipComments": false, "skipRegExps": false, "skipTemplates": true, "skipJSXText": true }
