--- a/next/package.json
+++ b/next/package.json
@@ -10,6 +10,7 @@
     "rfc": "plop"
   },
   "dependencies": {
+    "framer-motion": "^11.3.7",
     "next": "14.2.5",
     "next-mdx-remote": "^5.0.0",
     "next-sanity": "^9.4.2",
