--- a/next/package.json
+++ b/next/package.json
@@ -10,6 +10,7 @@
     "rfc": "plop"
   },
   "dependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "framer-motion": "^11.3.7",
     "next": "14.2.5",
     "next-mdx-remote": "^5.0.0",
