--- a/sanity/package.json
+++ b/sanity/package.json
@@ -15,13 +15,14 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/cli": "^3.52.2",
     "@sanity/vision": "^3.51.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.51.0",
     "sanity-plugin-markdown": "^4.1.2",
-    "sanity-plugin-media": "^2.3.0",
+    "sanity-plugin-media": "^2.3.2",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
