--- a/next/.eslintrc.json
+++ b/next/.eslintrc.json
@@ -27,7 +27,7 @@
   },
   "plugins": ["react"],
   "rules": {
-    "indent": ["error", 2],
+    // "indent": ["error", 2],
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
     "react/react-in-jsx-scope": "off",
