--- a/next/package.json
+++ b/next/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "resend": "^3.5.0",
     "sass": "^1.77.8",
     "sharp": "^0.33.4"
   },
