--- a/next/package.json
+++ b/next/package.json
@@ -10,6 +10,7 @@
     "rfc": "plop"
   },
   "dependencies": {
+    "@mailerlite/mailerlite-nodejs": "^1.2.2",
     "embla-carousel-react": "^8.1.7",
     "framer-motion": "^11.3.7",
     "next": "14.2.5",
