--- a/next/package.json
+++ b/next/package.json
@@ -13,8 +13,10 @@
     "@mailerlite/mailerlite-nodejs": "^1.2.2",
     "@next/third-parties": "^14.2.5",
     "@types/gtag.js": "^0.0.20",
+    "@types/jsonwebtoken": "^9.0.6",
     "embla-carousel-react": "^8.1.7",
     "framer-motion": "^11.3.7",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
     "next-mdx-remote": "^5.0.0",
     "next-sanity": "^9.4.2",
