--- a/next/package.json
+++ b/next/package.json
@@ -14,6 +14,7 @@
     "@next/third-parties": "^14.2.5",
     "@types/gtag.js": "^0.0.20",
     "@types/jsonwebtoken": "^9.0.6",
+    "@vimeo/player": "^2.26.0",
     "embla-carousel-react": "^8.1.7",
     "framer-motion": "^11.3.7",
     "jsonwebtoken": "^9.0.2",
