Dodano zależność next do package.json

--- a/next/package.json
+++ b/next/package.json
@@ -40,4 +40,9 @@
     "prettier": "^3.3.3",
     "typescript": "^5"
   }
+  "dependencies": {
+  "next": "^14.2.5",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0"
+}
 }
