--- a/next/package.json
+++ b/next/package.json
@@ -18,7 +18,7 @@
     "embla-carousel-react": "^8.1.7",
     "framer-motion": "^11.3.7",
     "jsonwebtoken": "^9.0.2",
-    "next": "^14.2.5",
+    "next": "14.2.5",
     "next-mdx-remote": "^5.0.0",
     "next-sanity": "^9.4.2",
     "react": "^18.2.0",
