--- a/next/package.json
+++ b/next/package.json
@@ -34,6 +34,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/vimeo": "^2.1.8",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "plop": "^4.0.1",
